--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,25 @@
 {
   "name": "server",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "bun run index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "fastify": "^5.3.3"
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
+    "otp-generator": "^4.0.1"
   }
 }
